Fixed the check for enabled datapacks, which previously resulted in all datapacks being enabled during the first world reload Added more Minecraft versions